# sure

./: .coolify-test  .dockerignore  .env.example  .env.local.example  .env.test.example  .erb_lint.yml  .gitattributes  .gitignore  .mise.local.toml  .sure-version  AGENTS.md  Bond-FinalChecks.md  Bond.txt  CHANGELOG.ru.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.preview  Gemfile  HEROKU_CONFIG.md  PLAN.md  PRODUCT.md  PR_DESCRIPTION.md  PR_REVIEW_1130.md  PR_REVIEW_1178.md  PR_REVIEW_1237.md  PR_SUMMARY.md  Procfile  Procfile.dev  README.md  REPORT.md  TODO.md  TODOS.md  VERSION  VERSIONING.md  biome.json  cloudflared-compose.yml  commit_error_handling.sh  complete_merge.sh  (+117 more)
.1code/: worktree.json
.claude/: launch.json  settings.local.json
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  copilot.instructions.md
.junie/: guidelines.md
.specify/: feature.json  init-options.json  integration.json
config/: application.rb  assistant.yml  boot.rb  brakeman.ignore  brakeman.yml  cable.yml  cache.yml  currencies.yml  database.yml  demo.yml  env_file_loader.rb  i18n-tasks.yml  llm.yml  puma.rb  recurring.yml  regions.yml  (+2 more)
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  remote.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: badge.rs  commands.rs  deep_link.rs  lib.rs  main.rs  menu.rs  notifications.rs  servers.rs  sso.rs  state.rs  window.rs
desktop/src-tauri/tests/: deep_link_test.rs  servers_test.rs
(+5230 files in other folders)
