[package]
name = "sure-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "sure_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
window-vibrancy = "0.5"
tauri-plugin-decorum = "1"
url = "2"
ureq = { version = "2", features = ["json"] }
open = "5"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[dev-dependencies]
